--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -29,28 +29,9 @@
 }
 
 .pm-teams {
-	column-count: 2;
+	columns: 4 10rem;
 	margin-bottom: var(--spacing-xxl);
 }
-
-@media only screen and (min-width: 600px) {
-	.pm-teams {
-		column-count: 3;
-	}
-}
-
-@media only screen and (min-width: 800px) {
-	.pm-teams {
-		column-count: 4;
-	}
-}
-
-/* .pm-matchup {
-	display: grid;
-	gap: .5em 1em;
-	grid-template-columns: auto 1fr;
-	margin-bottom: var(--spacing-xl);
-} */
 
 .pm-matchup__date {
 	margin-top: .2em;
@@ -74,32 +55,27 @@
 .pm-matchup__time {
 	font-size: var(--font-size-xs);
 }
-/*
-.pm-matchup__header {
-	display: flex;
-	gap: .5em;
-	align-items: center;
-	margin-bottom: var(--spacing-xs);
+
+.archive-pagination {
+	position: relative;
+	margin-bottom: var(--spacing-xxxl);
 }
 
-.pm-matchup__title {
-	margin-bottom: 0;
-}
-
-.pm-matchup__link {
-	font-size: var(--font-size-lg);
-	color: var(--color-heading);
-	text-decoration: none;
-}
-
-.pm-matchup__detail {
-	font-size: var(--font-size-sm);
-}
-
-.pm-matchup__item {
+.archive-pagination::after {
 	display: block;
-	margin-bottom: var(--spacing-xxxs);
-} */
+	width: 100%;
+	height: 24px;
+	position: absolute;
+	top: 100%;
+	background: repeating-linear-gradient(
+		120deg,
+		transparent,
+		transparent 12px,
+		var(--color-border) 12px,
+		var(--color-border) 24px
+	);
+	content: "";
+}
 
 /* Singular */
 
