--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -11,6 +11,10 @@
 	);
 }
 
+.has-standard-content {
+	--content-max-width: 70ch;
+}
+
 /* Archives & Singular */
 
 .archive-title,
@@ -19,6 +23,7 @@
 	gap: .4em;
 	grid-template-columns: 1fr auto 1fr;
 	align-items: center;
+	margin-inline: calc(var(--side-spacing) * -1);
 	margin-bottom: var(--spacing-xs);
 	text-align: center;
 }
@@ -37,7 +42,6 @@
 	--list-margin: 0;
 	display: table;
 	align-self: start; /* when a flex-item via .entry-wrap */
-	font-size: var(--font-size-sm);
 }
 
 .pm-prediction__item {
@@ -103,6 +107,7 @@
 	}
 
 	.entry-more-link {
+		margin: 0;
 		white-space: nowrap;
 	}
 
@@ -162,6 +167,43 @@
 
 /* Singular */
 
+.pm-jumps {
+	--list-style-type: none;
+	--list-margin: 0 0 var(--spacing-lg);
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	position: sticky;
+	top: var(--body-top);
+	margin-inline: calc(var(--side-spacing) * -1);
+	background-color: var(--color-alt);
+	z-index: 9;
+}
+
+.pm-jump {
+	flex: 1 0 20%;
+}
+
+.pm-jump__link {
+	--link-color: var(--color-body);
+	--link-color-hover: var(--color-primary);
+	--link-text-decoration: none;
+	--link-text-decoration-hover: none;
+	display: block;
+	padding: var(--spacing-sm) var(--spacing-sm);
+	font-size: var(--font-size-xs);
+	font-weight: var(--body-font-weight-bold);
+	text-align: center;
+	text-transform: uppercase;
+	line-height: 1;
+	white-space: nowrap;
+}
+
+.pm-jump__link:hover,
+.pm-jump__link:focus {
+	background-color: rgba(0, 0, 0, 0.025);
+}
+
 .entry-excerpt-single {
 	--entry-excerpt-margin-bottom: var(--spacing-md);
 }
@@ -213,6 +255,76 @@
 
 .pm-prediction__item:not(:last-child) strong {
 	padding-bottom: var(--spacing-xxs);
+}
+
+.pm-odds:has(.pm-toggle__input:not(:checked)) .is-not-top {
+	display: none;
+}
+
+.pm-odds {
+	--table-margin: 0;
+}
+
+/* .pm-odds thead {
+	position: sticky;
+	top: var(--body-top);
+} */
+
+.pm-odds thead th {
+	background-color: white;
+}
+
+.pm-odds th:first-child,
+.pm-odds td:first-child {
+	width: 50%;
+}
+
+.pm-toggle_label {
+	display: flex;
+	gap: var(--spacing-xs);
+	align-items: center;
+	margin: 0;
+	cursor: pointer;
+}
+
+.pm-toggle__slider {
+	position: relative;
+	display: inline-block;
+	width: 40px;
+	height: 20px;
+	margin: 0;
+	padding: 0;
+	background-color: var(--toggle-bg, rgba(0, 0, 0, 0.25));
+	border-radius: 20px;
+	transition: var(--transition);
+}
+
+.pm-toggle__input {
+	position: absolute !important;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	width: 1px;
+	border: 0;
+	overflow: hidden;
+}
+
+.pm-toggle__slider::after {
+	position: absolute;
+	width: 18px;
+	height: 18px;
+	border-radius: 20px;
+	background-color: white;
+	top: 1px;
+	left: var(--toggle-left, 1px);
+	right: var(--toggle-right, unset);
+	transition: all 0.3s;
+	content: "";
+}
+
+.pm-toggle__input:checked + .pm-toggle__slider {
+	--toggle-left: 'unset';
+	--toggle-right: 1px;
+	--toggle-bg: var(--color-success);
 }
 
 .pm-results {
@@ -282,13 +394,6 @@
 	color: var(--color-body);
 	font-size: var(--font-size-sm);
 	opacity: 0.6;
-}
-
-.pm-source__summary {
-	overflow: hidden;
-	display: -webkit-box;
-	-webkit-box-orient: vertical;
-	-webkit-line-clamp: 2;
 }
 
 .pm-entities {
