default featured image

--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -225,6 +225,7 @@
 .pm-jumps {
 	--list-style-type: none;
 	--list-margin: 0 0 var(--spacing-lg);
+	--list-item-margin: 0;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
