--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -226,28 +226,43 @@
 	--list-style-type: none;
 	--list-margin: 0 0 var(--spacing-lg);
 	--list-item-margin: 0;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
 	position: sticky;
 	top: var(--body-top);
-	margin-inline: calc(var(--side-spacing) * -1);
-	background-color: var(--color-alt);
+	background-color: var(--color-header);
+	overflow-x: auto;
 	z-index: 9;
 }
 
-.pm-jump {
-	flex-grow: 1;
+@media only screen and (max-width: 599px) {
+	.pm-jumps {
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr auto;
+		margin-inline: calc(var(--side-spacing) * -1);
+	}
+
+	.pm-jumps::after {
+		display: grid;
+		place-items: center;
+		width: 40px;
+		height: 100%;
+		position: sticky;
+		right: 0;
+		margin-top: -.1em;
+		background: #18193699;
+		color: white;
+		content: " ↔ ";
+	}
 }
 
 .pm-jump__link {
-	--link-color: var(--color-body);
+	--link-color: var(--color-white);
 	--link-color-hover: var(--color-primary);
 	--link-text-decoration: none;
 	--link-text-decoration-hover: none;
 	display: block;
 	padding: var(--spacing-sm) var(--spacing-sm);
-	font-size: var(--font-size-xs);
+	font-size: 12px;
 	font-weight: var(--body-font-weight-bold);
 	text-align: center;
 	text-transform: uppercase;
