--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -20,6 +20,31 @@
 	--content-max-width: 70ch;
 }
 
+.pm-notice {
+	display: flex;
+	padding: var(--spacing-xxxs) var(--spacing-sm) var(--spacing-xxxs) 0;
+	background: white;
+	border: var(--border);
+	border-left: 0;
+}
+
+.pm-notice.error {
+	background: var(--color-primary);
+	color: white;
+}
+.pm-notice.error::before {
+	background: var(--color-primary-dark);
+}
+
+.pm-notice::before {
+	display: block;
+	width: 5px;
+	margin-block: calc((var(--spacing-xxxs) + 1px) * -1);
+	margin-right: var(--spacing-xs);
+	background: var(--color-primary);
+	content: "";
+}
+
 /* Archives & Singular */
 
 .archive-title,
@@ -339,9 +364,49 @@
 
 .pm-update {
 	margin-bottom: var(--spacing-lg);
-	font-size: .75rem;
+	font-size: .65rem;
 	text-align: center;
 	text-transform: uppercase;
+}
+
+.pm-vote {
+	--heading-color: white;
+	padding: var(--spacing-xl);
+	text-align: center;
+	background-color: var(--color-header);
+	color: white;
+}
+
+.pm-vote__form {
+	--button-width: 100%;
+	display: grid;
+	gap: var(--spacing-md);
+	place-items: center;
+	grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+	max-width: var(--breakpoint-xs);
+	margin-inline: auto;
+
+	.button {
+		position: relative;
+	}
+
+	.button.selected::after {
+		display: inline-block;
+		width: auto;
+		position: absolute;
+		top: calc(100% - var(--spacing-xxs));
+		left: 50%;
+		transform: translateX(-50%);
+		padding: var(--spacing-xxxs) var(--spacing-xs);
+		font-size: 60%;
+		font-weight: var(--body-font-weight-bold);
+		line-height: 1;
+		text-transform: uppercase;
+		background-color: white;
+		color: var(--color-header);
+		border-radius: 10rem;
+		content: "Your Vote";
+	}
 }
 
 .pm-prediction {
