--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -48,7 +48,7 @@
 /* Archives & Singular */
 
 .archive-title,
-.entry-title-single {
+.entry-title-singleee {
 	display: grid;
 	gap: .4em;
 	grid-template-columns: 1fr auto 1fr;
@@ -60,11 +60,37 @@
 
 .archive-title::before,
 .archive-title::after,
-.entry-title-single::before,
-.entry-title-single::after {
+.entry-title-singleee::before,
+.entry-title-singleee::after {
 	height: 1.1cap;
 	background: var(--background-lines);
 	content: "";
+}
+
+.pm-team__link {
+	--link-color: var(--color-body);
+	--link-color-hover: var(--color-body);
+	--link-text-decoration: none;
+	--link-text-decoration-hover: none;
+	--link-filter-hover: brightness(.95);
+	display: flex;
+	align-items: center;
+	gap: var(--spacing-xs);
+	padding: 0 var(--spacing-sm) 0 0;
+	font-size: var(--font-size-xs);
+	font-weight: var(--body-font-weight-bold);
+}
+
+.pm-team__link[data-code]::before {
+	display: grid;
+	place-items: center;
+	width: 32px;
+	height: 32px;
+	font-size: 10px;
+	background-color: var(--team-color);
+	color: white;
+	border-radius: 100vw;
+	content: attr(data-code);
 }
 
 .pm-prediction__list {
@@ -169,33 +195,6 @@
 	margin-bottom: var(--spacing-xxl);
 }
 
-.pm-team__link {
-	--link-color: var(--color-body);
-	--link-color-hover: var(--color-body);
-	--link-text-decoration: none;
-	--link-text-decoration-hover: none;
-	--link-filter-hover: brightness(.95);
-	display: flex;
-	align-items: center;
-	gap: var(--spacing-xs);
-
-	padding: 0;
-	font-size: var(--font-size-xs);
-	font-weight: var(--body-font-weight-bold);
-}
-
-.pm-team__link[data-code]::before {
-	display: grid;
-	place-items: center;
-	width: 32px;
-	height: 32px;
-	font-size: 10px;
-	background-color: var(--team-color);
-	color: white;
-	border-radius: 100vw;
-	content: attr(data-code);
-}
-
 .pm-team__name {
 	display: none;
 }
@@ -274,6 +273,77 @@
 }
 
 /* Singular */
+
+.entry-title-single {
+	--entry-title-single-margin-bottom: var(--spacing-sm);
+	display: flex;
+	gap: var(--spacing-xs);
+	align-items: center;
+	justify-content: center;
+	opacity: var(--color-primary-light);
+}
+
+.entry-title-team__link {
+	--link-color: var(--color-heading);
+	--link-color-hover: var(--color-heading);
+	--link-text-decoration: none;
+	--link-text-decoration-hover: none;
+	--link-filter-hover: brightness(.95);
+	display: flex;
+	align-items: center;
+	gap: var(--spacing-xs);
+	padding: 0 var(--spacing-sm) 0 0;
+	font-size: var(--font-size-xxl);
+	background-color: var(--color-alt);
+	border-radius: 100vw 3px 3px 100vw;
+
+}
+
+.entry-title-team__link[data-code]::before {
+	display: grid;
+	place-items: center;
+	width: 40px;
+	height: 40px;
+	font-size: 14px;
+	background-color: var(--team-color);
+	color: white;
+	border-radius: 100vw;
+	content: attr(data-code);
+}
+
+.entry-title__vs {
+	font-size: var(--font-size-md);
+}
+
+.pm-update {
+	margin-bottom: var(--spacing-lg);
+	font-size: var(--font-size-sm);
+	text-align: center;
+}
+
+.entry-meta-before-content {
+	--entry-meta-margin: 0 0 var(--spacing-md);
+}
+
+.entry-terms-matchup_tag a {
+	margin: 0;
+	padding: var(--spacing-xxxs) var(--spacing-xs);
+	font-size: var(--font-size-xs);
+	background: var(--color-alt);
+	color: var(--color-body);
+	text-decoration: none;
+	border-radius: var(--button-border-radius, var(--border-radius));
+}
+
+.entry-terms-matchup_tag a::before {
+	content: "#";
+}
+
+.entry-terms-matchup_tag a:hover,
+.entry-terms-matchup_tag a:focus {
+	background: var(--color-primary-dark);
+	color: white;
+}
 
 .pm-jumps {
 	--list-style-type: none;
@@ -355,18 +425,6 @@
 	height: 1.1cap;
 	background: var(--background-lines);
 	content: "";
-}
-
-.pm-datetime {
-	margin-bottom: 0;
-	text-align: center;
-}
-
-.pm-update {
-	margin-bottom: var(--spacing-lg);
-	font-size: .65rem;
-	text-align: center;
-	text-transform: uppercase;
 }
 
 .pm-vote {
