teams list wrap

--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -217,6 +217,10 @@
 		column-gap: var(--spacing-sm);
 	}
 
+	.pm-team {
+		overflow: hidden;
+	}
+
 	.pm-team__link {
 		margin: 0 0 var(--spacing-sm);
 		background: var(--color-alt);
