--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -67,6 +67,12 @@ body {
 
 /* Archives & Singular */
 
+.pm-teams {
+	--list-style-type: none;
+	--list-margin: 0 0 var(--spacing-xxl);
+	margin-bottom: var(--spacing-xxl);
+}
+
 .pm-team__link {
 	--link-color: var(--color-body);
 	--link-color-hover: var(--color-body);
@@ -75,22 +81,65 @@ body {
 	--link-filter-hover: brightness(.95);
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 	gap: var(--spacing-xs);
-	padding: 0 var(--spacing-sm) 0 0;
 	font-size: var(--font-size-xs);
 	font-weight: var(--body-font-weight-bold);
+	border-radius: 0 3px 3px 0;
 }
 
-.pm-team__link[data-code]::before {
+.pm-team__link[data-code]::after {
 	display: grid;
 	place-items: center;
-	width: 32px;
-	height: 32px;
-	font-size: 10px;
 	background-color: var(--team-color);
 	color: white;
-	border-radius: 100vw;
+	aspect-ratio: 1/1;
 	content: attr(data-code);
+}
+
+.pm-team__name {
+	display: none;
+}
+
+@media only screen and (max-width: 599px) {
+	.pm-teams {
+		display: grid;
+		gap: var(--spacing-xs);
+		grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
+	}
+
+	.pm-team__link[data-code]::after {
+		width: 100%;
+		height: 100%;
+		font-size: 13px;
+	}
+
+	.pm-team__link {
+		margin: 0;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	.pm-teams {
+		columns: 4 150px;
+		column-gap: var(--spacing-sm);
+	}
+
+	.pm-team__link {
+		margin: 0 0 var(--spacing-sm);
+		padding: 0 0 0 var(--spacing-sm);
+		background: var(--color-alt);
+	}
+
+	.pm-team__link[data-code]::after {
+		width: 32px;
+		height: 32px;
+		font-size: 10px;
+	}
+
+	.pm-team__name {
+		display: block;
+	}
 }
 
 .pm-prediction__list {
@@ -123,8 +172,10 @@ body {
 
 .archive-title::before,
 .archive-title::after {
-	height: 1.1cap;
 	background: var(--background-lines);
+	background-size: 100% 1.1cap;
+	background-repeat: repeat-x;
+	background-position: 50%;
 	content: "";
 }
 
@@ -220,49 +271,6 @@ body {
 	}
 }
 
-.pm-teams {
-	--list-style-type: none;
-	--list-margin: 0 0 var(--spacing-xxl);
-	margin-bottom: var(--spacing-xxl);
-}
-
-.pm-team__name {
-	display: none;
-}
-
-@media only screen and (max-width: 599px) {
-	.pm-teams {
-		display: grid;
-		gap: var(--spacing-xxs);
-		grid-template-columns: repeat(auto-fill, minmax(32px, 1fr));
-	}
-
-	.pm-team__link {
-		margin: 0;
-	}
-}
-
-@media only screen and (min-width: 600px) {
-	.pm-teams {
-		columns: 4 120px;
-		column-gap: var(--spacing-sm);
-	}
-
-	.pm-team {
-		overflow: hidden;
-	}
-
-	.pm-team__link {
-		margin: 0 0 var(--spacing-sm);
-		background: var(--color-alt);
-		border-radius: 100vw 3px 3px 100vw;
-	}
-
-	.pm-team__name {
-		display: block;
-	}
-}
-
 .pm-matchup__date {
 	margin-top: .2em;
 	text-transform: uppercase;
@@ -314,13 +322,16 @@ body {
 
 /* Singular */
 
-.single-matchup .entry-title-single {
-	--entry-title-single-margin-bottom: var(--spacing-sm);
-	text-align: center;
-}
-
 .single-matchup .entry-excerpt-single {
 	--entry-excerpt-margin-bottom: var(--spacing-md);
+}
+
+.entry-title-team:first-child {
+	text-align: end;
+}
+
+.entry-title-team:last-child {
+	text-align: start;
 }
 
 .entry-title-team__link {
@@ -329,18 +340,22 @@ body {
 	--link-text-decoration: none;
 	--link-text-decoration-hover: none;
 	--link-filter-hover: brightness(.95);
-	display: inline-flex;
-	align-items: center;
-	gap: var(--spacing-xs);
-	padding: 0 var(--spacing-sm) 0 0;
+	display: flex;
 	font-size: var(--font-size-xxl);
 	white-space: nowrap;
-	background-color: var(--color-alt);
-	border-radius: 100vw 3px 3px 100vw;
-
 }
 
-.entry-title-team__link[data-code]::before {
+.entry-title-team__name {
+	display: grid;
+	place-items: center;
+	height: 100%;
+	padding: 0 var(--spacing-sm);
+	background-color: white;
+}
+
+.entry-title-team__link[data-code]:first-of-type::before,
+.entry-title-team__link[data-code]:first-of-type::after,
+.entry-title-team__link[data-code]:last-of-type::before {
 	display: grid;
 	place-items: center;
 	width: 40px;
@@ -348,19 +363,68 @@ body {
 	font-size: 14px;
 	background-color: var(--team-color);
 	color: white;
-	border-radius: 100vw;
 	content: attr(data-code);
 }
 
 .entry-title__vs {
-	margin-inline: var(--spacing-sm);
+	display: grid;
+	place-items: center;
 	font-size: var(--font-size-md);
+}
+
+@media only screen and (max-width: 599px) {
+	.single-matchup .entry-title-single {
+		--entry-title-single-margin-bottom: var(--spacing-md);
+		display: grid;
+		gap: var(--spacing-xs);
+		grid-template-columns: 1fr;
+	}
+
+	.entry-title-team__link[data-code]:first-of-type::after {
+		display: none;
+	}
+
+	.entry-title__vs {
+		max-width: 40px;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	.single-matchup .entry-title-single {
+		--entry-title-single-margin-bottom: var(--spacing-sm);
+		display: grid;
+		grid-template-columns: 1fr auto 1fr;
+		background: var(--background-lines);
+		background-size: 100% 1.1cap;
+		background-repeat: repeat-x;
+		background-position: 50%;
+	}
+
+	.entry-title-team__link[data-code]:first-of-type::before {
+		display: none;
+	}
+
+	.entry-title-team__link[data-code]:first-of-type {
+		justify-content: end;
+	}
+
+	.entry-title-team__link[data-code]:last-of-type {
+		justify-content: start;
+	}
+
+	.entry-title__vs {
+		padding: 0 var(--spacing-md);
+		background-color: white;
+	}
+
+	.entry-wrap-single > .pm-update {
+		text-align: center;
+	}
 }
 
 .entry-wrap-single > .pm-update {
 	margin-bottom: var(--spacing-lg);
 	font-size: var(--font-size-sm);
-	text-align: center;
 }
 
 .entry-meta-before-content {
