--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -81,14 +81,13 @@ body {
 	--link-filter-hover: brightness(.95);
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 	gap: var(--spacing-xs);
 	font-size: var(--font-size-xs);
 	font-weight: var(--body-font-weight-bold);
 	border-radius: 0 3px 3px 0;
 }
 
-.pm-team__link[data-code]::after {
+.pm-team__link[data-code]::before {
 	display: grid;
 	place-items: center;
 	background-color: var(--team-color);
@@ -108,7 +107,7 @@ body {
 		grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
 	}
 
-	.pm-team__link[data-code]::after {
+	.pm-team__link[data-code]::before {
 		width: 100%;
 		height: 100%;
 		font-size: 13px;
@@ -127,11 +126,11 @@ body {
 
 	.pm-team__link {
 		margin: 0 0 var(--spacing-sm);
-		padding: 0 0 0 var(--spacing-sm);
+		padding: 0 var(--spacing-sm) 0 0;
 		background: var(--color-alt);
 	}
 
-	.pm-team__link[data-code]::after {
+	.pm-team__link[data-code]::before {
 		width: 32px;
 		height: 32px;
 		font-size: 10px;
@@ -203,7 +202,7 @@ body {
 .search-results .entry-archive {
 	--heading-margin-bottom: var(--spacing-sm);
 	display: grid;
-	gap: 2vw;
+	gap: max(2vw, var(--spacing-md));
 	grid-template-columns: auto 1fr;
 }
 
@@ -281,7 +280,7 @@ body {
 .pm-matchup__time {
 	display: block;
 	text-align: end;
-	padding-right: 2vw;
+	padding-right: max(2vw, var(--spacing-md));
 	border-right: 2px solid var(--color-body);
 }
 
@@ -431,10 +430,19 @@ body {
 	--entry-meta-margin: 0 0 var(--spacing-md);
 }
 
+.entry-terms.entry-terms-matchup_tag {
+	display: flex;
+	flex-wrap: wrap;
+	gap: var(--spacing-xxxs);
+}
+
 .entry-terms-matchup_tag a {
+	--link-text-decoration: none;
+	--link-text-decoration-hover: none;
 	margin: 0;
 	padding: var(--spacing-xxxs) var(--spacing-xs);
 	font-size: var(--font-size-xs);
+	line-height: var(--line-height-sm);
 	background: var(--color-alt);
 	color: var(--color-body);
 	text-decoration: none;
@@ -620,7 +628,7 @@ body {
 }
 
 .pm-toggle_label {
-	display: flex;
+	display: inline-flex;
 	gap: var(--spacing-xs);
 	align-items: center;
 	margin: 0;
