--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -353,7 +353,7 @@ body {
 	place-items: center;
 	height: 100%;
 	padding: 0 var(--spacing-sm);
-	background-color: white;
+	background-color: var(--color-alt);
 }
 
 .entry-title-team__link[data-code]:first-of-type::before,
@@ -553,6 +553,7 @@ body {
 	text-align: center;
 	background-color: var(--color-header);
 	color: white;
+	border-bottom: 4px solid var(--color-primary);
 }
 
 .pm-vote__form {
@@ -809,21 +810,29 @@ body {
 
 		> ul {
 			display: grid;
-			gap: var(--spacing-md);
+			gap: var(--spacing-xxxl) var(--spacing-md);
 			grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+			margin-top: var(--spacing-lg);
 		}
 	}
 
 	.rcp_subscription_level {
+		position: relative;
 		display: flex;
 		flex-direction: column;
-		padding: var(--spacing-lg);
-		background-color: var(--color-alt);
 
 		label {
 			flex: 1;
 			display: flex;
 			flex-direction: column;
+			padding: var(--spacing-lg);
+			background-color: var(--color-alt);
+			transition: var(--transition);
+		}
+
+		label:hover,
+		label:focus {
+			filter: brightness(0.96);
 		}
 
 		.button {
@@ -847,25 +856,46 @@ body {
 			font-size: var(--button-font-size);
 			content: "Selected";
 		}
+	}
 
-		/* .rcp_level:checked + label > .button::after {
-			display: inline-block;
-			width: auto;
-			position: absolute;
-			bottom: calc(100% - var(--spacing-xxs));
-			left: 50%;
-			transform: translateX(-50%);
-			padding: var(--spacing-xxxs) var(--spacing-xs);
-			font-size: 60%;
-			font-weight: var(--body-font-weight-bold);
-			line-height: 1;
-			text-transform: uppercase;
-			background-color: white;
-			color: var(--color-body);
-			border: 1px solid rgba(0, 0, 0, .1);
-			border-radius: 10rem;
-			content: "✔️ Selected";
-		} */
+	/* Hide voting for now. */
+	.rcp_subscription_level_13 {
+		display: none;
+	}
+
+	.rcp_subscription_level_1::before,
+	.rcp_subscription_level_4::before,
+	.rcp_subscription_level_7::before,
+	.rcp_subscription_level_10::before,
+	.rcp_subscription_level_13::before {
+		position: absolute;
+		left: 0;
+		bottom: calc(100% + var(--spacing-sm));
+		display: block;
+		font-family: var(--font-family-heading);
+		font-weight: var(--heading-font-weight);
+		font-size: var(--font-size-xxxl);
+		border-bottom: 6px solid var(--color-primary);
+	}
+
+	.rcp_subscription_level_1::before {
+		content: "MLB";
+	}
+
+	.rcp_subscription_level_4::before {
+		content: "NFL";
+	}
+
+	.rcp_subscription_level_7::before {
+		content: "NHL";
+	}
+
+	.rcp_subscription_level_10::before {
+		content: "NBA";
+	}
+
+	.rcp_subscription_level_13::before {
+		content: "Voting";
 	}
 
 	.rcp_subscription_level_name {
