--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -959,24 +959,26 @@ body {
 	}
 }
 
-.rcp_registration_total:not(:first-child),
-#rcp_gateway_extra_fields {
-	padding: var(--spacing-lg);
-}
+.rcp_form {
+	.rcp_registration_total:not(:first-child),
+	#rcp_gateway_extra_fields {
+		padding: var(--spacing-lg);
+	}
 
-.rcp_agree_to_terms_fieldset,
-.rcp_agree_to_privacy_policy_fieldset,
-#rcp_auto_renew_wrap {
-	max-width: var(--breakpoint-xs);
-	margin-block: calc(var(--spacing-md) * -1) 0;
-	margin-inline: auto;
-	padding-bottom: var(--spacing-xxs);
-}
+	.rcp_agree_to_terms_fieldset,
+	.rcp_agree_to_privacy_policy_fieldset,
+	#rcp_auto_renew_wrap {
+		max-width: var(--breakpoint-xs);
+		margin-block: calc(var(--spacing-md) * -1) 0;
+		margin-inline: auto;
+		padding-bottom: var(--spacing-xxs);
+	}
 
-#rcp_submit_wrap {
-	margin-top: var(--spacing-md);
-	padding: 0 var(--spacing-lg) var(--spacing-lg);
-	text-align: center;
+	#rcp_submit_wrap {
+		margin-top: var(--spacing-md);
+		padding: 0 var(--spacing-lg) var(--spacing-lg);
+		text-align: center;
+	}
 }
 
 .rcp_registration_total:not(:first-child) {
