submit button css

--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -970,14 +970,12 @@ body {
 	#rcp_auto_renew_wrap,
 	#rcp_submit_wrap {
 		max-width: var(--breakpoint-xs);
-		margin-block: calc(var(--spacing-md) * -1) 0;
-		margin-inline: auto;
-		padding-bottom: var(--spacing-xxs);
+		margin: 0 auto;
+		padding: 0;
 	}
 
 	#rcp_submit_wrap {
 		margin-top: var(--spacing-md);
-		padding: 0 var(--spacing-lg) var(--spacing-lg);
 		text-align: center;
 
 		#rcp_submit {
