--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -967,6 +967,16 @@ body {
 
 	#rcp_gateway_extra_fields {
 		margin-bottom: var(--spacing-sm);
+
+		label {
+			margin-bottom: var(--spacing-xxxs);
+		}
+
+		input[type="text"],
+		input[type="password"],
+		input[type="email"] {
+			padding: var(--spacing-sm) var(--spacing-md);
+		}
 	}
 
 	.rcp_agree_to_terms_fieldset,
@@ -986,10 +996,10 @@ body {
 			--button-width: 100%;
 		}
 	}
-}
 
-.rcp_registration_total:not(:first-child) {
-	border-bottom: 2px solid rgba(0, 0, 0, .025);
+	.rcp_registration_total:not(:first-child) {
+		padding-bottom: 0;
+	}
 }
 
 .rcp_discount_code_field_wrap {
@@ -1033,18 +1043,6 @@ body {
 		margin: 0;
 		padding: 0;
 		border: 0;
-	}
-}
-
-#rcp_gateway_extra_fields {
-	label {
-		margin-bottom: var(--spacing-xxxs);
-	}
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"] {
-		padding: var(--spacing-sm) var(--spacing-md);
 	}
 }
 
