--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -65,6 +65,12 @@ body {
 	content: "";
 }
 
+.pm-obfuscated {
+	filter: blur(6px);
+	opacity: 0.5;
+	user-select: none;
+}
+
 /* Archives & Singular */
 
 .pm-teams {
@@ -148,17 +154,17 @@ body {
 .pm-prediction__list {
 	--list-style-type: none;
 	--list-margin: 0;
-	display: table;
+	/* display: table; */
 	align-self: start; /* when a flex-item via .entry-wrap */
 	font-size: var(--font-size-sm);
 }
 
 .pm-prediction__item {
-	display: table-row;
+	/* display: table-row; */
 }
 
 .pm-prediction__item > * {
-	display: table-cell;
+	/* display: table-cell; */
 }
 
 /* Archives */
@@ -605,13 +611,48 @@ body {
 	}
 }
 
-.pm-prediction__item strong {
-	padding-right: var(--spacing-sm);
+.pm-prediction__inner {
+	position: relative;
 }
 
-.pm-prediction__item:not(:last-child) strong {
-	padding-bottom: var(--spacing-xxs);
+.pm-prediction__cta {
+	position: absolute;
+	inset: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+
+	h3::before {
+		display: block;
+		width: 48px;
+		height: 48px;
+		margin: 0 auto var(--spacing-md);
+		background: currentColor;
+		mask-image: url( 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) --><path d="M224 412c-15.5 0-28-12.5-28-28v-64c0-15.5 12.5-28 28-28s28 12.5 28 28v64c0 15.5-12.5 28-28 28zm224-172v224c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V240c0-26.5 21.5-48 48-48h32v-48C80 64.5 144.8-.2 224.4 0 304 .2 368 65.8 368 145.4V192h32c26.5 0 48 21.5 48 48zm-320-48h192v-48c0-52.9-43.1-96-96-96s-96 43.1-96 96v48zm272 48H48v224h352V240z"/></svg>' );
+		mask-repeat: no-repeat;
+		mask-size: contain;
+		content: "";
+	}
 }
+
+.pm-prediction__inner--obfuscated > ul,
+.pm-prediction__inner--obfuscated > p {
+	filter: blur(6px);
+	opacity: 0.5;
+	user-select: none;
+}
+
+/* .pm-prediction__item strong {
+	padding-right: var(--spacing-sm);
+} */
+
+/* .pm-prediction__item:not(:last-child) strong {
+	padding-bottom: var(--spacing-xxs);
+} */
 
 .pm-odds:has(.pm-toggle__input:not(:checked)) .is-not-top {
 	display: none;
