--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -193,15 +193,13 @@ body {
 .taxonomy-archive-description[data-code]::before {
 	display: grid;
 	place-items: center;
-	width: 64px;
-	height: 64px;
-	margin: 0 auto var(--spacing-sm);
-	font-size: var(--font-size-lg);
+	width: 48px;
+	height: 48px;
+	margin: 0 auto var(--spacing-xxs);
+	font-size: var(--font-size-sm);
 	font-weight: var(--body-font-weight-bold);
 	background-color: var(--team-color);
 	color: white;
-	border: 2px solid white;
-	outline: 3px solid var(--team-color);
 	border-radius: 100vw;
 	content: attr(data-code);
 }
