--- a/assets/css/mai-asknews.css
+++ b/assets/css/mai-asknews.css
@@ -1015,8 +1015,13 @@ body {
 		padding: var(--spacing-lg);
 	}
 
+	.rcp-discount > td:first-child {
+		font-family: var(--code-font-family);
+	}
+
 	#rcp_gateway_extra_fields {
 		margin-bottom: var(--spacing-sm);
+		padding-top: 0;
 
 		label {
 			margin-bottom: var(--spacing-xxxs);
@@ -1029,12 +1034,16 @@ body {
 		}
 	}
 
+	.rcp_agree_to_terms_fieldset {
+		margin-top: var(--spacing-sm);
+	}
+
 	.rcp_agree_to_terms_fieldset,
 	.rcp_agree_to_privacy_policy_fieldset,
 	#rcp_auto_renew_wrap,
 	#rcp_submit_wrap {
 		max-width: var(--breakpoint-xs);
-		margin: 0 auto;
+		margin-inline: auto;
 		padding: 0;
 	}
 
@@ -1045,10 +1054,6 @@ body {
 		#rcp_submit {
 			--button-width: 100%;
 		}
-	}
-
-	.rcp_registration_total:not(:first-child) {
-		padding-bottom: 0;
 	}
 }
 
@@ -1077,10 +1082,19 @@ body {
 		border: 0;
 	}
 
+	tbody th {
+		margin: var(--spacing-sm) 0 0;
+		padding: 0;
+	}
+
 	tbody td {
 		margin: 0;
 		padding: 0;
 		border: 0;
+	}
+
+	tfoot tr:first-child {
+		margin: var(--spacing-sm) 0 0;
 	}
 
 	tfoot td  {
